Farver og logo importeret

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,9 @@
 
 // 2. Include any default variable overrides here
 $link-decoration: none;
+$primary: #0c61e2;
+$secondary: #0209a0;
+$warning: #ff5e37;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../node_modules/bootstrap/scss/variables";
@@ -10,7 +13,10 @@ $link-decoration: none;
 
 // 4. Include any default map overrides here
 $custom-colors: (
-	"farve": $cyan-400,
+	"btnWhite": #eef1f6,
+	"Morkegron": #004032,
+	"mint": #b0ffc5,
+	"gul": #ffd300,
 );
 
 $theme-colors: map-merge($theme-colors, $custom-colors);
