Færdig med FOrside og bidrags siden

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -43,6 +43,19 @@ body{
 	backdrop-filter: blur(7.5px);
 }
 
+.bg-secondaryToWhiteGradient{
+	background: linear-gradient(180deg, #0209A0 25%, #F6EEDE 50%);
+}
+
+.donationCardW{
+	width: 33%;
+	min-width: 319px;
+}
+
+.randomLine{
+	min-height: 5px;
+}
+
 // SM breakpoint
 @media screen and (min-width: 576px){
  .w-sm-50{
@@ -54,5 +67,18 @@ body{
 @media screen and (min-width: 768px){
 	.w-md-50{
 		width: 50% !important;
+	}
+	.w-md-25{
+		width: 50% !important;
+	}
+}
+
+// Lg breakpoint
+@media screen and (min-width: 992px){
+	.w-lg-50{
+		width: 50% !important;
+	}
+	.w-lg-25{
+		width: 25% !important;
 	}
 }
