--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,6 +26,19 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 
 $box-shadow-sm: 5px 5px 5px 0px rgba($black, .025);
 
+$custom-widths: (
+				10: 10%,
+				20: 20%,
+				35: 35%,
+				90: 90%
+);
+
+@each $size, $value in $custom-widths {
+	.w-#{$size} {
+		width: $value !important;
+	}
+}
+
 @import "bootstrapComponents";
 
 // 5. Du kan lave styling her...
