--- a/css/styles.scss
+++ b/css/styles.scss
@@ -101,11 +101,14 @@ body{
 
 // Lg breakpoint
 @media screen and (min-width: 992px){
+	.w-lg-25{
+		width: 25% !important;
+	}
 	.w-lg-50{
 		width: 50% !important;
 	}
-	.w-lg-25{
-		width: 25% !important;
+	.w-lg-75{
+		width: 75% !important;
 	}
 	.w-lg-100{
 		width: 100% !important;
